[gd_scene load_steps=4 format=3 uid="uid://m0732e0vw8hc"]

[ext_resource type="Script" path="res://Scenes/User Interface/Apps/farroz_item_display.gd" id="1_1g8eu"]
[ext_resource type="Texture2D" uid="uid://d2q78hrgmtem0" path="res://Assets/User Interface/testlogo.png" id="1_h5nii"]
[ext_resource type="Resource" uid="uid://dr3okj8ml5u8y" path="res://Resources/Stocks/TestStock.tres" id="2_403bu"]

[node name="FarrozItemDisplay" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_1g8eu")
stock_resource = ExtResource("2_403bu")

[node name="NameDisplay" type="RichTextLabel" parent="."]
layout_mode = 2
text = "Albob"
fit_content = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_h5nii")
expand_mode = 3
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
text = "Desk
Harga:1000
Waktu Pengiriman: 1"
fit_content = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="DecButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "-"

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center]1"
fit_content = true
scroll_active = false

[node name="IncButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+"
